--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
 		"@babel/core": "^7.3.4",
 		"@babel/preset-env": "^7.3.4",
 		"babel-core": "^6.26.3",
-		"d3-format": "^1.3.2",
 		"http-server": "^0.11.1",
 		"rollup": "^1.4.0",
 		"rollup-plugin-babel": "^4.3.2",
@@ -37,7 +36,10 @@
 	"dependencies": {
 		"d3-array": "^2.0.3",
 		"d3-axis": "^1.0.12",
+		"d3-brush": "^1.0.6",
 		"d3-collection": "^1.0.7",
+		"d3-dispatch": "^1.0.5",
+		"d3-format": "^1.3.2",
 		"d3-scale": "^2.2.2",
 		"d3-scale-chromatic": "^1.3.3",
 		"d3-selection": "^1.4.0",
